--- a/Test1/Variables/WebApp.yaml
+++ b/Test1/Variables/WebApp.yaml
@@ -1,6 +1,6 @@
 ---
 URL: http://newtours.demoaut.com/mercurywelcome.php
-Browser: IE
+Browser: Chrome
 UserName: mercury
 password: mercury
 FirstName: First1 Last1
