--- a/RF_Test/Variables/WebApp.yaml
+++ b/RF_Test/Variables/WebApp.yaml
@@ -1,6 +1,6 @@
 ---
 URL: http://newtours.demoaut.com/mercurywelcome.php
-Browser: Chrome
+Browser: headlesschrome
 UserName: mercury
 password: mercury
 FirstName: First1 Last1
