--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /libspecs/
+/log.html
+/output.xml
+/report.html
+/selenium-screenshot-1.png
+/selenium-screenshot-2.png
+/selenium-screenshot-3.png
