--- a/RF_Test/Variables/WebServices.yaml
+++ b/RF_Test/Variables/WebServices.yaml
@@ -3,24 +3,24 @@ WSDL: http://www.dneonline.com/calculator.asmx?wsdl
 TempXML: RF_Test\\Variables\\SOAPRequests\\Temp.xml
 
 Multiply:
-  intA: 15
-  intB: 20
+  IntA: 15
+  IntB: 20
   MethodName: Multiply
   ReqPath: Body/Multiply
   ResPath: Body/MultiplyResponse/MultiplyResult
   RequestXML: RF_Test\\Variables\\SOAPRequests\\Multiply.xml
 
 Add:
-  intA: 10
-  intB: 15
+  IntA: 10
+  IntB: 15
   MethodName: Add
   ReqPath: Body/Add
   ResPath: Body/AddResponse/AddResult
   RequestXML: RF_Test\\Variables\\SOAPRequests\\Add.xml
 
 Subtract:
-  intA: 50
-  intB: 15
+  IntA: 50
+  IntB: 15
   MethodName: Subtract
   ReqPath: Body/Subtract
   ResPath: Body/SubtractResponse/SubtractResult
